--- a/BombAlarm/TISensorBrowser.Core/TISensorBrowser.csproj
+++ b/BombAlarm/TISensorBrowser.Core/TISensorBrowser.csproj
@@ -43,6 +43,9 @@
     <Compile Include="Extensions\NameColorConverter.cs" />
     <Compile Include="CharacteristicManager.cs" />
     <Compile Include="CharacteristicDetails.cs" />
+    <Compile Include="Pages\SetTimerPage.xaml.cs">
+      <DependentUpon>SetTimerPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.2.3.6257\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.2.3.6257\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets')" />
@@ -55,6 +58,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\ServiceList.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pages\SetTimerPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
